[build-system]
requires = [
  "setuptools",
  "wheel",
]

[project]
name = "pulearn"
version = "0.2.0"
description = "Positive-unlabeled learning with Python"
readme = "README.rst"
keywords = [
  "machine-learning",
  "positive-unlabeled-learning",
  "pulearning",
]
license = { file = "LICENSE" }
authors = [
  { name = "Shay Palachy Affek", email = "shay.palachy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Other/Nonlisted Topic",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "numpy>=1.26.4,<2.5",
  "scikit-learn>=1.4.2,<2",
  "six>=1.16,<1.18",
]
optional-dependencies.torch = [
  "torch>=2",
]
urls.Source = "https://github.com/pulearn/pulearn"

[tool.setuptools]
include-package-data = true
packages.find.where = [
  "src",
]  # list of folders that contain the packages (["."] by default)
packages.find.include = [
  "pulearn*",
]  # package names should match these glob patterns (["*"] by default)
packages.find.namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
target-version = "py38"
line-length = 79
# Exclude a variety of commonly ignored directories.
exclude = [
  ".eggs",
  ".git",
  ".ruff_cache",
  "__pypackages__",
  "_build",
  "build",
  "dist",
]
# Enable Pyflakes `E` and `F` codes by default.
lint.select = [
  "D",      # see: https://pypi.org/project/pydocstyle
  "E",
  "F",      # see: https://pypi.org/project/pyflakes
  "I",      # see: https://pypi.org/project/isort/
  "RUF100", # alternative to yesqa
  # "N", # see: https://pypi.org/project/pep8-naming
  "S",      # see: https://pypi.org/project/flake8-bandit
  "SIM",
  "W",      # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "A",  # see: https://pypi.org/project/flake8-builtins
  "B",  # see: https://pypi.org/project/flake8-bugbear
  "C4", # see: https://pypi.org/project/flake8-comprehensions
]
lint.ignore = [
  "C901",
  "E203",
]
lint.per-file-ignores."src/**/__init__.py" = [
  "D104",
]
lint.per-file-ignores."src/pulearn/config.py" = [
  "D100",
]
lint.per-file-ignores."src/pulearn/guides/__init__.py" = [
  "E501",
]
lint.per-file-ignores."tests/**" = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "S101",
  "S105",
  "S311",
  "S603",
]
lint.unfixable = [
  "F401",
]
# [tool.ruff.pydocstyle]
## Use Google-style docstrings.
# convention = "google"
# [tool.ruff.pycodestyle]
# ignore-overlong-task-comments = true
# Unlike Flake8, default to a complexity level of 10.
lint.mccabe.max-complexity = 10

[tool.docformatter]
recursive = true
# some docstring start with r"""
wrap-summaries = 79
wrap-descriptions = 79
blank = true

[tool.typos]
# pn is a valid abbreviation for "positive-negative" in PU learning (e.g. AUC_pn)
default.extend-words.pn = "pn"
# hom is a valid abbreviation for "homogeneity" (e.g. hom_metrics variable)
default.extend-words.hom = "hom"
# fpr is a standard ML abbreviation for "false positive rate" (ROC curve)
default.extend-words.fpr = "fpr"
# strat is a common shorthand for "stratify" / "stratification"
default.extend-words.strat = "strat"

[tool.pytest]
ini_options.testpaths = [
  "pulearn",
  "tests",
]
ini_options.norecursedirs = [
  "dist",
  "build",
]
ini_options.addopts = [
  "--doctest-modules",
  "--color=yes",
  "--cov=pulearn",
  "--cov-report=term",
  "--cov-report=xml:cov.xml",
  "-rxXs",
  "-v",
  "-s",
]
ini_options.markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage]
run.branch = true
run.dynamic_context = "test_function"
run.omit = [
  "**/scripts/**",
  "pulearn/__init__.py",
  "pulearn/_version.py",
  "tests/*",
]
# Regexes for lines to exclude from consideration
report.exclude_lines = [
  "if TYPE_CHECKING:",         # Is only true when running mypy, not tests
  "pragma: no cover",          # Have to re-enable the standard pragma
  "raise NotImplementedError", # Don't complain if tests don't hit defensive assertion code:
]
report.show_missing = true
